api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: sample-api
  name: sample-api
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    nodePort: 31004
  selector:
    io.kompose.service: sample-api
  type: NodePort
status:
  loadBalancer: {}
