api/api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: http
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: sample-api.hpdev.sample.int
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-api
          servicePort: 80
